<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">桌面1</string>
    <string name="title_activity_main_acitivity">MainAcitivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="shutdown">APP正在控制远程关机\n手表即将关机</string>
    <string name="charge">充电过程中，禁止使用手表</string>
    <string name="fully">已充满</string>
    <string name="add_friend">加好友</string>
    <string name="shake_or_click">点击图片摇一摇</string>
    <string name="no_network">暂无网络哦~</string>
    <string name="app_forbidden">应用已被家长禁用</string>
    <string name="app_forbidden_in_class">上课禁用时间,要专心学习哦~</string>
    <string name="please_sim">请插入sim卡</string>
    <string name="low_battery">电量过低请及时充电</string>
    <string name="battery">剩余电量 %d %%</string>
    <string name="_100">电量100％</string>
    <string name="shutdown_reminder">手表未插卡，手表\n将在%d秒后关机</string>
    <string name="setting_packageName">com.baehug.settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ok">ok</string>
    <string name="zero">0</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="add_friend_check">是否申请添加对方为好友？</string>
    <string name="check_alipay">支付宝功能暂未激活是否确认激活？</string>
    <string name="apply_for_friend">申请加你为好友</string>
    <string name="no_friends_request">无好友申请</string>
    <string name="update_now">立即升级</string>
    <string name="updating">升级中不可操作</string>
    <string name="click_reset">点击重试</string>
    <string name="searching">搜索中...</string>
    <string name="open_power">在超级省电模式下，仅部分应用可以使用，是否确定开启?</string>
    <string name="close_power">是否退出超级省电模式?</string>
    <string name="super_power_mode">超级省电模式</string>
    <string name="know">我已知晓</string>
    <string name="registering">支付宝功能激活中\n两个工作日内生效</string>
    <string name="register_fail">支付宝功能激活失败请联系客服</string>
    <string name="sure">好的</string>
</resources>
