<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/content_layout"
        android:background="@drawable/new_version_style"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        android:layout_width="293dp"
        android:layout_height="185dp">

        <TextView
            android:text="@string/add_friend_check"
            android:singleLine="true"
            android:id="@+id/update_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_add_friend"
                android:textColor="@color/white"
                android:background="@drawable/cancel_orange_circular"
                android:layout_width="117dp"
                android:layout_height="56dp"
                android:text="@string/cancel"/>

            <Button
                android:layout_marginStart="20dp"
                android:id="@+id/confirm_add_friend"
                android:textColor="@color/_8E8E8E"
                android:background="@drawable/confirm_gray_circular"
                android:layout_width="117dp"
                android:layout_height="56dp"
                android:text="@string/confirm"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>